add v2 github workflows: cmd check and pkgdown

--- a/README.Rmd
+++ b/README.Rmd
@@ -14,7 +14,8 @@ knitr::opts_chunk$set(
 # erikmisc <a href='https://github.com/erikerhardt/erikmisc'><img src='man/figures/erikmisc.png' align="right" height="138.5" /></a>
 
 <!-- badges: start -->
-[![R-CMD-check](https://github.com/erikerhardt/erikmisc/actions/workflows/check-standard.yaml/badge.svg)](https://github.com/erikerhardt/erikmisc/actions/workflows/check-standard.yaml)
+<!-- github workflows: https://github.com/r-lib/actions/tree/v2/examples -->
+[![R-CMD-check](https://github.com/erikerhardt/erikmisc/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/erikerhardt/erikmisc/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
 ## Overview
