updates to e_rfsrc_classification, e_plot_rf_vimp, e_plot_roc, and qmd templates

--- a/data-raw/qmd_template/erik_qmd_template.qmd
+++ b/data-raw/qmd_template/erik_qmd_template.qmd
@@ -197,7 +197,7 @@ set.seed(my_seed)
 
 ## Data sources/measurement
 
-* *Give information separately for cases and controls in case-control studies and, if applicable, for exposed and unexposed groups in cohort and cross-sectional studies.
+* Give information separately for cases and controls in case-control studies and, if applicable, for exposed and unexposed groups in cohort and cross-sectional studies.
 * For each variable of interest, give sources of data and details of methods of assessment (measurement). Describe comparability of assessment methods if there is more than one group
 
 ## Bias
